colab-runner.ipynb stochastic speedup

--- a/colab-runner.ipynb
+++ b/colab-runner.ipynb
@@ -68,23 +68,39 @@
         "        # Configurações dos executáveis\n",
         "        self.executables = [\n",
         "            {\n",
-        "                \"name\": \"serial_c\",\n",
-        "                \"path\": os.path.join(self.build_dir, \"fsh_serial_c\"),\n",
-        "                \"command_template\": \"{exec_path} -i {input} -m {method} {grayscale_flag}\",\n",
-        "                \"output_suffix\": \"_serial_c.ppm\",\n",
-        "                \"params\": {\"method\": \"FloydSteinberg\"}\n",
+        "            \"name\": \"serial_c\",\n",
+        "            \"path\": os.path.join(self.build_dir, \"fsh_serial_c\"),\n",
+        "            \"command_template\": \"{exec_path} -i {input} -m {method} {grayscale_flag}\",\n",
+        "            \"output_suffix\": \"_serial_c.ppm\",\n",
+        "            \"params\": {\"method\": \"FloydSteinberg\"}\n",
         "            },\n",
         "            {\n",
-        "                \"name\": \"openmp\",\n",
-        "                \"path\": os.path.join(self.build_dir, \"fsh_omp\"),\n",
-        "                \"command_template\": \"{exec_path} {input} {output} {p} {stochastic} {grayscale_flag}\",\n",
-        "                \"output_suffix\": \"_openmp.ppm\"\n",
+        "            \"name\": \"openmp\",\n",
+        "            \"path\": os.path.join(self.build_dir, \"fsh_omp\"),\n",
+        "            \"command_template\": \"{exec_path} {input} {output} {p} {stochastic} {grayscale_flag}\",\n",
+        "            \"output_suffix\": \"_openmp.ppm\",\n",
+        "            \"params\": {\"stochastic\": 1}\n",
         "            },\n",
         "            {\n",
-        "                \"name\": \"cuda\",\n",
-        "                \"path\": os.path.join(self.build_dir, \"fsh_cuda\"),\n",
-        "                \"command_template\": \"{exec_path} {input} {output} {p} {stochastic} {grayscale_flag}\",\n",
-        "                \"output_suffix\": \"_cuda.ppm\"\n",
+        "            \"name\": \"openmp_no_stochastic\",\n",
+        "            \"path\": os.path.join(self.build_dir, \"fsh_omp\"),\n",
+        "            \"command_template\": \"{exec_path} {input} {output} {p} {stochastic} {grayscale_flag}\",\n",
+        "            \"output_suffix\": \"_openmp_no_stochastic.ppm\",\n",
+        "            \"params\": {\"stochastic\": 0}\n",
+        "            },\n",
+        "            {\n",
+        "            \"name\": \"cuda\",\n",
+        "            \"path\": os.path.join(self.build_dir, \"fsh_cuda\"),\n",
+        "            \"command_template\": \"{exec_path} {input} {output} {p} {stochastic} {grayscale_flag}\",\n",
+        "            \"output_suffix\": \"_cuda.ppm\",\n",
+        "            \"params\": {\"stochastic\": 1}\n",
+        "            },\n",
+        "            {\n",
+        "            \"name\": \"cuda_no_stochastic\",\n",
+        "            \"path\": os.path.join(self.build_dir, \"fsh_cuda\"),\n",
+        "            \"command_template\": \"{exec_path} {input} {output} {p} {stochastic} {grayscale_flag}\",\n",
+        "            \"output_suffix\": \"_cuda_no_stochastic.ppm\",\n",
+        "            \"params\": {\"stochastic\": 0}\n",
         "            }\n",
         "        ]\n",
         "        \n",
@@ -336,6 +352,10 @@
         "                            execution_time = ms / 1000.0\n",
         "                        except Exception:\n",
         "                            pass\n",
+        "            \n",
+        "\n",
+        "\n",
+        "            \n",
         "            # Fallback: se não encontrou, usa medição de tempo Python\n",
         "            if execution_time is None:\n",
         "                execution_time = time.time() - start_time\n",
