--- a/report/.latex_report/report.tex
+++ b/report/.latex_report/report.tex
@@ -13,7 +13,11 @@
 \usepackage{xcolor}                   % Para colorir blocos de código
 \usepackage{listings}                 % Para formatar código
 \usepackage{minted}                   % Para blocos de código com destaque de sintaxe
-
+\usepackage{pgfplots}                 % Para gráficos
+\usepackage{caption}                  % Para \caption em figuras
+\usepackage{subcaption}               % Para subfiguras com \begin{subfigure}
+\usepackage{float}                    % Para o modificador [H]
+    
 \hypersetup{
     colorlinks=true,
     linkcolor=black,
