--- a/colab-runner.ipynb
+++ b/colab-runner.ipynb
@@ -15,31 +15,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from google.colab import drive\n",
-        "\n",
-        "# Montar Google Drive\n",
-        "drive.mount('/content/gdrive')\n",
-        "\n",
-        "BASE_DIR = \"/content/gdrive/MyDrive/final-project-paralelizacao-tecnica-de-meios-tons\"\n",
-        "%cd {BASE_DIR}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "initial-setup"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "/home/henrique/Músicas/final-project-paralelizacao-tecnica-de-meios-tons\n"
-          ]
-        }
-      ],
-      "source": [
         "import os\n",
         "import subprocess\n",
         "import time\n",
@@ -47,9 +22,23 @@
         "from PIL import Image\n",
         "import pandas as pd\n",
         "\n",
-        "# Configurar diretório base\n",
-        "BASE_DIR = \".\"\n",
-        "%cd {BASE_DIR}"
+        "# Verificar se está rodando no Google Colab\n",
+        "try:\n",
+        "    import google.colab\n",
+        "    IN_COLAB = True\n",
+        "except ImportError:\n",
+        "    IN_COLAB = False\n",
+        "\n",
+        "if IN_COLAB:\n",
+        "    from google.colab import drive\n",
+        "    drive.mount('/content/gdrive')\n",
+        "    BASE_DIR = \"/content/gdrive/MyDrive/final-project-paralelizacao-tecnica-de-meios-tons\"\n",
+        "else:\n",
+        "    BASE_DIR = os.path.expanduser(\".\")\n",
+        "\n",
+        "# Mudar para o diretório base\n",
+        "os.chdir(BASE_DIR)\n",
+        "print(f\"Diretório atual: {os.getcwd()}\")\n"
       ]
     },
     {
