--- a/report/.latex_report/report.tex
+++ b/report/.latex_report/report.tex
@@ -51,7 +51,7 @@
 \input{chapters/formulacao}
 
 \section{Implementação}
-\input{chapters/implementacao}
+\input{chapters/implementacao.tex}
 
 \section{Speedup}
 \input{chapters/speedup}
