preenchimento de tabelas e atualização do script de benchmark

--- a/report/.latex_report/report.tex
+++ b/report/.latex_report/report.tex
@@ -18,7 +18,8 @@
 \usepackage{float}        % Para usar [H] com \begin{table}[H]
 \usepackage{multirow}     % Para usar \multirow em tabelas
 \usepackage{booktabs}     % (opcional) para melhor aparência das tabelas
-    
+
+\pgfplotsset{compat=1.18}
 
 
 \hypersetup{
