--- a/report/.latex_report/report.tex
+++ b/report/.latex_report/report.tex
@@ -8,7 +8,6 @@
 \usepackage[margin=0.5in]{geometry}   % Para ajustar margens
 \usepackage{graphicx}                 % Para imagens
 \usepackage{algorithm}                % Para ambiente de algoritmo
-\usepackage{algorithmic}              % Para pseudocódigo
 \usepackage{xcolor}                   % Para colorir blocos de código
 \usepackage{listings}                 % Para formatar código
 \usepackage{minted}                   % Para blocos de código com destaque de sintaxe
@@ -18,6 +17,7 @@
 \usepackage{float}        % Para usar [H] com \begin{table}[H]
 \usepackage{multirow}     % Para usar \multirow em tabelas
 \usepackage{booktabs}     % (opcional) para melhor aparência das tabelas
+\usepackage{algpseudocode}
 
 \pgfplotsset{compat=1.18}
 
