Rename Speedup -> Benchmarking; WSNR pertence à Benchmarking

--- a/report/.latex_report/report.tex
+++ b/report/.latex_report/report.tex
@@ -54,7 +54,7 @@
 \section{Implementação}
 \input{chapters/implementacao.tex}
 
-\section{Speedup}
+\section{Benchmarking}
 \input{chapters/speedup}
 
 \section{Conclusão}
