descrição do ambiente de testes, adição de comentarios nas tabelas

--- a/colab-runner.ipynb
+++ b/colab-runner.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "project-config"
       },
@@ -129,7 +129,7 @@
         "            \"p\": 0.5,\n",
         "            \"stochastic\": 1,\n",
         "            \"grayscale_flag\": \"-g\",\n",
-        "            \"method\": \"JarvisJudiceNinke\"\n",
+        "            \"method\": \"FloydSteinberg\"\n",
         "        }\n",
         "    \n",
         "    def get_timestamp(self):\n",
